--- a/ERP_Project/src/main/resources/static/css/common/menu.css
+++ b/ERP_Project/src/main/resources/static/css/common/menu.css
@@ -1,107 +1,119 @@
-*{
-  box-sizing: border-box;
+* {
+	box-sizing: border-box;
 }
 
-body{
-  margin: 0;
-  padding: 0;
+body {
+	margin: 0;
+	padding: 0;
 }
 
-#user-info-menu{
-  height: 150px;
+
+#sidebar {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 60px;
+	height: 100vh;
+	background-color: rgb(55, 78, 121);
+	margin: 0;
+	transition: width 0.3s ease;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
-#sidebar{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 60px;
-  height: 100vh;
-  background-color: rgb(55, 78, 121);
-  margin: 0;
-  transition: width 0.3s ease;
-  white-space: nowrap;
-  overflow: hidden;
+
+#sidebar:hover {
+	width: 200px;
 }
 
-#sidebar:hover{
-  width: 150px;
+.side-menu {
+	color: white;
+	width: fit-content;
+	font-size: 18px;
+	margin-left: 10px;
 }
 
-#sidebar:hover{
-  width: 250px;
+.side-menu:hover {
+	cursor: pointer;
+	font-weight: bold;
 }
 
-.side-menu{
-  color: white;
-  width: fit-content;
-  font-size: 18px;
-  margin-left: 10px;
+#user-info-menu {
+	margin: 10px 0;
+	padding-left: 10px;
+	height: 130px;
+	color: white;
+	opacity: 0;
+	font-size: 20px;
+	font-weight: bold;
+	border-bottom: 2px solid white;
 }
 
-.side-menu:hover{
-  cursor: pointer;
-  font-weight: bold;
-}
+#sidebar:hover #user-info-menu {
+	opacity: 1;
+	transition: opacity 0.4s ease, margin-left 0.4s ease;
 
+}
 #sidebar:hover .side-menu-text{
-  opacity: 1;
-  transition: opacity 0.4s ease, margin-left 0.4s ease;
-  margin-left: 10px; /* 텍스트 약간 오른쪽 이동 */
+	opacity: 1;
+	transition: opacity 0.4s ease, margin-left 0.4s ease;
+	margin-left: 10px;
+	/* 텍스트 약간 오른쪽 이동 */
 }
 
-.side-menu-text{
-  opacity: 0;
-  vertical-align: 10px;
+.side-menu-text {
+	opacity: 0;
+	vertical-align: 10px;
 }
 
-.sub-menu{
-  color: white;
-  display: none;
-  margin-top: 5px;
-  margin-left: 70px;
+.sub-menu {
+	color: white;
+	display: none;
+	margin-top: 5px;
+	margin-left: 70px;
 }
 
-.sub-menu>li{
-  margin: 15px 0;
+.sub-menu>li {
+	margin: 10px 0;
 }
 
-.sub-menu a{
-  text-decoration: none;
-  color: white;
+.sub-menu a {
+	text-decoration: none;
+	color: white;
 }
 
-.sub-menu:hover{
-  cursor: pointer;
+.sub-menu a:hover {
+	cursor: pointer;
 }
 
-ul,li{
-  list-style: none;
-  padding-left: 0;
-  margin: 0;
+ul,
+li {
+	list-style: none;
+	padding-left: 0;
+	margin: 0;
 }
 
-.menu-item:not(:last-child){
-  width: 100%;
-  margin-bottom: 40px;
+.menu-item:not(:last-child) {
+	width: 100%;
+	margin-bottom: 25px;
 }
 
 .sign-out {
-  font-size: 18px;
-  color: white;
-  margin: 10px;
+	font-size: 18px;
+	color: white;
+	margin: 10px;
 }
 
-.sign-out:hover{
-  cursor: pointer;
-  font-weight: bold;
+.sign-out:hover {
+	cursor: pointer;
+	font-weight: bold;
 }
 
-#sidebar>ul{
-  height: calc(100vh - 200px);
+#sidebar>ul {
+	height: calc(100vh - 200px);
 }
 
-.icon{
-  width: 35px;
-  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(157deg) brightness(102%) contrast(102%);
+.icon {
+	width: 35px;
+	filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(157deg) brightness(102%) contrast(102%);
 }
