--- a/ERP_Project/src/main/resources/static/css/item/customer.css
+++ b/ERP_Project/src/main/resources/static/css/item/customer.css
@@ -17,6 +17,9 @@ table {
 	text-align: center;
 }
 
+#item-customer-table tr:hover {
+	background-color: rgb(192, 192, 192);
+}
 #item-customer-pagingbar>input {
 	width: 30px;
 }
