--- a/ERP_Project/src/main/resources/static/css/common/modal.css
+++ b/ERP_Project/src/main/resources/static/css/common/modal.css
@@ -10,7 +10,7 @@
 	z-index: 1000;
 }
 
-.modal {
+.modal-custom {
 	right: 0;
     text-align: center;
 	width: 800px;
@@ -20,25 +20,25 @@
     box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.4);
     overflow: hidden;
 }
-.modal input{
+.modal-custom input{
 	border: 0;
 	width: 100%;
 	outline: none;
 }
-.modal>table {
+.modal-custom>table {
 	width: 80%;
 	border: 2px solid black;
 	margin: 0 auto;
 }
-.modal th, .modal td{
+.modal-custom th, .modal-custom td{
 	border: 2px solid black;
 	
 }
-.modal button{
+.modal-custom-button{
 	margin: 10px auto;
 	width: 80%;
 }
-.modal-header{
+.modal-custom-header{
 	background-color: rgb(55, 78, 121);
 	height : 30px;
 	width: 100%;
