--- a/ERP_Project/src/main/resources/static/css/item/customer.css
+++ b/ERP_Project/src/main/resources/static/css/item/customer.css
@@ -7,7 +7,7 @@ table {
 }
 
 #item-customer-table {
-	width: 100%;
+	width: 1200px;
 }
 
 #item-customer-table th,
@@ -16,23 +16,31 @@ table {
 	border: 2px solid black;
 	text-align: center;
 }
-
+#item-customer-table thead{
+    background-color: rgb(225, 235, 255);
+}
 #item-customer-table tr:hover {
 	background-color: rgb(192, 192, 192);
+}
+#item-customer-table>thead>tr:hover {
+    background-color: rgba(0, 0, 0, 0);
 }
 #item-customer-pagingbar>input {
 	width: 30px;
 }
-#customer-maxPage{
-	color: gray;
-}
 #item-customer-search-keyword{
 	margin-left: 20px;
+}
+#item-customer-input-area{
+	width: 1200px;
 }
 .add {
 	float: right;
 }
-
+.modal-submit-btn{
+	width: 80%;
+	margin-top: 10px;
+}
 input {
 	outline: none;
 }
