--- a/ERP_Project/src/main/resources/static/css/item/sell.css
+++ b/ERP_Project/src/main/resources/static/css/item/sell.css
@@ -7,7 +7,9 @@ table {
 }
 
 #item-sell-table {
-	width: 1200px;
+	margin: 0 auto;
+	width: 100%;
+	min-width: 1200px;
 }
 
 #item-sell-table th,
@@ -19,20 +21,18 @@ table {
 #item-sell-table thead{
     background-color: rgb(225, 235, 255);
 }
-#item-sell-table tr:hover {
-	background-color: rgb(192, 192, 192);
-}
-#item-sell-table>thead>tr:hover {
-    background-color: rgba(0, 0, 0, 0);
-}
 #item-sell-pagingbar>input {
 	width: 30px;
 }
-#item-sell-search-keyword{
+#item-sell-search-select{
 	margin-left: 20px;
 }
+#item-sell-search-keyword{
+	margin-left: 5px;
+}
 #item-sell-input-area{
-	width: 1200px;
+	width: 100%;
+	min-width: 1200px;
 }
 .add {
 	float: right;
@@ -44,4 +44,55 @@ table {
 input {
 	outline: none;
 }
+.modal-search-input-area{
+	width: 100%;
+	position: relative;
+	z-index: 10;
+	display: none;
+}
+.suggestion_box{
+	width: 100%;
+	height: 100px;
+	border : 1px solid black;
+	background-color: white;
+	position: absolute;
+	overflow-y: auto;
+	z-index: 100;
+}
+.suggested_items{
+	width: 100%;
+	height: 20px;
+	text-align: left;
+}
+.suggested_items:hover{
+	background-color: lightgray;
+}
+.modal-sell-price{
+	color: gray;
+}
+#item-sell-submit-table{
+	margin-top: 30px;
+}
+#item-sell-submit-list{
+	margin-top:-2px;
+	width: 100%;
+}
+#item-sell-submit-list-area{
+	width: 80%;
+	height: 135px;
+	margin: 0 auto;
+	background-color: lightgray;
+	overflow-y: scroll;
+}
 
+/*스크롤 바 레이아웃만 없애고 스크롤 기능은 유지*/
+#item-sell-submit-list-area{
+	-ms-overflow-style: none;
+}
+
+#item-sell-submit-list-area::-webkit-scrollbar{
+	display:none;
+}
+.col-delete:hover{
+	cursor : pointer;
+}
