--- a/ERP_Project/src/main/resources/static/css/notice/list.css
+++ b/ERP_Project/src/main/resources/static/css/notice/list.css
@@ -49,7 +49,8 @@ input {
 	outline: none;
 }
 #modal-noticeContent{
-	height: 350px;
-}
-.modal_data{
+	border: 0;
+	outline: none;
+	width: 100%;
+	height: 550px;
 }
