--- a/ERP_Project/src/main/resources/static/css/common/menu.css
+++ b/ERP_Project/src/main/resources/static/css/common/menu.css
@@ -6,7 +6,11 @@ body {
 	margin: 0;
 	padding: 0;
 }
-
+#sidebar ul,
+#sidebar li {
+	list-style: none;
+	padding-left: 0;
+}
 
 #sidebar {
 	position: fixed;
@@ -86,12 +90,7 @@ body {
 	cursor: pointer;
 }
 
-ul,
-li {
-	list-style: none;
-	padding-left: 0;
-	margin: 0;
-}
+
 
 .menu-item:not(:last-child) {
 	width: 100%;
