--- a/ERP_Project/src/main/resources/static/css/approve/출장 보고서.css
+++ b/ERP_Project/src/main/resources/static/css/approve/출장 보고서.css
@@ -1,30 +1,35 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 20px;
+.report-container { 
+    width: 800px;
+    margin: 50px auto;
+    padding: 50px 30px;
+    border: 1px solid #000;
+    background: #fff;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
-table {
+
+.report-table {
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 20px;
 }
-th, td {
+.report-table th, .report-table td {
     border: 1px solid #000;
     text-align: center;
     padding: 10px;
 }
-th {
-    background-color: #f2f2f2;
+.report-table th {
+    background-color: rgb(225, 226, 212);
 }
-.w {
+.report-table .w {
     text-align: left;
     height: 40px;
 }
-td {
+.report-table td {
     height: 40px;
 }
-.ic {
+.report-table .ic {
     min-width: 100px;
 }
-.ic-s {
+.report-table .ic-s {
     min-width: 50px;
 }
