--- a/ERP_Project/src/main/resources/static/css/approve/휴직원.css
+++ b/ERP_Project/src/main/resources/static/css/approve/휴직원.css
@@ -1,9 +1,3 @@
-body {
-    font-family: '맑은 고딕', Arial, sans-serif;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #F9F9F9;
-}
 .container {
     width: 800px;
     margin: 0 auto;
@@ -12,50 +6,54 @@ body {
     padding: 40px; /* 상하좌우 여백 추가 */
     height: auto;
 }
+
 h1 {
     text-align: center;
     font-size: 28px;
     margin-bottom: 40px;
 }
-table {
+
+/* vacation-table 클래스를 기준으로 스타일 수정 */
+.vacation-table {
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 60px; /* 테이블 아래 여백 */
 }
-table, th, td {
+
+.vacation-table, .vacation-table th, .vacation-table td {
     border: 1px solid black;
 }
-th, td {
-    padding: 20px; /* 셀 안의 여백을 늘림 */
-    height: 15px; /* 셀의 기본 높이 설정 */
+
+.vacation-table th, .vacation-table td {
+    padding: 20px; 
+    height: 15px; 
     text-align: left;
     vertical-align: middle;
 }
-#sub-container{
+
+.vacation-table th{
+   background-color: rgb(225, 226, 212);
+}
+
+#sub-container {
     display: inline-block;
     margin-right: 100px;
 }
-.main-container{
+
+.main-container {
     text-align: center;
     margin-left: 60px;
 }
+
 .footer {
     text-align: center;
     margin-top: 60px; /* 아래 여백 늘리기 */
     font-size: 14px;
 }
+
 .signature {
     margin-top: 100px; /* 서명란 위의 여백 늘리기 */
     text-align: center;
     font-size: 18px;
     line-height: 2; /* 줄 간격 조절 */
 }
-.name{
-    
-}
-
-
-
-
-
-
