관리자 기능 (실시간 공지, 사원추가, 제품추가, 카테고리 추가)

--- a/ERP_Project/src/main/resources/static/css/common/menu.css
+++ b/ERP_Project/src/main/resources/static/css/common/menu.css
@@ -30,6 +30,18 @@ body {
 	width: 200px;
 }
 
+#project-name{
+	font-size: 50px;
+	font-weight: 200;
+	width: fit-content;
+	margin-left: -3px;
+	margin-bottom: 10px;
+}
+
+#project-name:hover{
+	color: cornflowerblue;
+	cursor: pointer;
+}
 .side-menu {
 	color: white;
 	width: fit-content;
@@ -45,7 +57,7 @@ body {
 #user-info-menu {
 	margin: 10px 0;
 	padding-left: 10px;
-	height: 130px;
+	height: 120px;
 	color: white;
 	opacity: 0;
 	font-size: 20px;
