--- a/ERP_Project/src/main/resources/static/css/common/main.css
+++ b/ERP_Project/src/main/resources/static/css/common/main.css
@@ -1,3 +1,38 @@
+#admin-notice{
+	top: 100px;
+	width: 100vw;
+	min-height: 250px;
+	background-color: rgba(0,0,0,0.5);
+	position: fixed;
+	text-align: center;
+	color: white;
+	display: none;
+}
+#admin-notice-title{
+	margin: 10px;
+	height: 50px;
+	width: 100%;
+}
+#admin-notice-content{
+	font-size: 25px;
+	margin: 10px auto;
+	width: 50%;
+	max-width: 50vw;
+	min-height: 120px;
+	word-break: break-all;
+}
+#admin-notice-close{
+	padding: 1px 10px;
+	font-weight: bold;
+	font-size: 20px;
+	float: right;
+	margin: 10px;
+}
+#admin-notice-close:hover{
+	cursor: pointer;
+}
+
+
 #main-content-header {
 	margin: 30px auto;
 	padding: 1px 15px;
@@ -9,6 +44,9 @@
 
 #main-content {
 	margin-left: 60px;
+}
+#main-content-header>h1{
+	margin-top: 30px;
 }
 
 #main-content-block {
