--- a/ERP_Project/src/main/resources/static/css/common/modal.css
+++ b/ERP_Project/src/main/resources/static/css/common/modal.css
@@ -14,7 +14,8 @@
 	right: 0;
     text-align: center;
 	width: 800px;
-	height: 600px;
+	min-height: 200px;
+	padding-bottom: 30px;
 	background-color: white;
 	border-radius: 10px;
     box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.4);
